[gd_scene load_steps=6 format=3 uid="uid://ndxy0nwnr544"]

[ext_resource type="Script" path="res://boat_interact.gd" id="1_kutlm"]
[ext_resource type="Texture2D" uid="uid://dl5y7n1f68ycc" path="res://icon.svg" id="2_mwqc5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ccnwp"]
radius = 112.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2p306"]
atlas = ExtResource("2_mwqc5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_usahh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p306")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BoatInteractArea" type="Area2D"]
script = ExtResource("1_kutlm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ccnwp")

[node name="BoatPartCounter" type="Label" parent="."]
offset_left = -16.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -33.0
text = "0/5"

[node name="BoatSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_usahh")

[node name="PreEventPrep" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="timeout" from="PreEventPrep" to="." method="_on_pre_event_prep_timeout"]
